2001-03-01  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/style.c (ProcessNewStyle):
	fixed reversers window group options

2001-02-28  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/fvwm2.1:
	* fvwm/style.c (ProcessNewStyle):
	* fvwm/style.h:
	* fvwm/window_flags.h (DO_ICONIFY_WINDOW_GROUPS):
	* fvwm/fvwm.h (struct):
	* fvwm/stack.h (mark_transient_subtree):
	* fvwm/stack.c (mark_transient_subtree):
	(collect_transients_recursive):
	* fvwm/icons.c (DeIconify):
	(Iconify):
	new styles IconifyWindowGroups/IconifyWindowGroupsOff.

	* fvwm/placement.c (PlaceWindow):
	fixed a small bug in window group handling

	* fvwm/placement.c (PlaceWindow):
	* fvwm/style.c (ProcessNewStyle):
	* fvwm/style.h:
	* fvwm/window_flags.h (DO_IGNORE_WINDOW_GROUP_HINT):
	* fvwm/fvwm.h (struct):
	new styles KeepWindowGroupsOnDesk/ScatterWindowGroups for use with
	mozilla which misuses the window group hint

2001-02-27  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menus.c (do_menu):
	gixed event selection when returning from submenus

	* fvwm/placement.c (PlaceWindow):
	small performance enhancement

	* fvwm/gnome.c:
	commented unused code

2001-02-26  Dan Espen  <dane@mk.telcordia.com>

	* NEWS:  Update  news with 2.2.5,  identify   2.2.5 as  the latest
 	stable release.

2001-02-26  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (HandleUnmapNotify):
	applied deadlock fix from Hippo

2001-02-25  Michael Han  <mikehan@mikehan.com>

	* configure.in:
	libs/fvwmlib.h:
	libs/mkstemp.h:
	Backing out mkstemp() -- not useful/necessary

2001-02-26  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/stack.c (must_move_transients):
	(RaiseOrLowerWindow):
	* fvwm/icons.c (Iconify):
	(DeIconify):
	cleaned up

2001-02-24  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (HandleMapRequestKeepRaised):
	hide icons swallowed by parent icon on restart

	* fvwm/icons.c (Iconify):
	fixed iconic state in modules when an icon that was swallowed by a
	parent icon was recaptured

	* fvwm/icons.c (Iconify):